@@ -210,6 +210,36 @@ Log::debug(self, "LAISURED NODE E:")
       end
     end
 
+    def leisured_node_except_nodes(except_nodes = [], blocking = true)
+Log::debug(self, "LAISURED NODE S:")
+      @no_of_active_processors_mutex.synchronize do
+	loop do
+	  min_node = nil
+	  min_no_processor = nil
+	  for uuid, node in @nodes.dup
+	    next if except_nodes.include?(node)
+
+	    no = @no_of_active_processors[node]
+	    if !min_no_processor or min_no_processor > no
+	      min_no_processor = no
+	      min_node = node
+	    end
+	  end
+	  if min_no_processor <= CONF.MASTER_MAX_ACTIVE_PROCESSORS
+Log::debug(self, "LAISURED NODE E:")
+	    return min_node 
+	  end
+	  if blocking
+            Log::debug(self, "LAISURED NODE 1 WAITING:")
+            @no_of_active_processors_cv.wait(@no_of_active_processors_mutex)
+            Log::debug(self, "LAISURED NODE 2 WAITING END:")
+	  else
+	    return nil
+	  end
+	end
+      end
+    end
+
     def unlimited_leisured_node
       min_node = nil
       min_no_processor = nil
